test/semantic_errors/invalid_for1.mc
void main() {
    int i;
    for( ; i == false; ) {

    }
}